# lvtu-AI

./: .env.example  .gitignore  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  index.html  旅图-WebH5-重构PRD.md  旅图-原型技术文档.md  旅图-项目所需Skills清单.md
backend/: .dockerignore  .env.example  API.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260617_0001_create_foundation_tables.py  20260618_0001_add_user_password_hash.py  20260618_0002_add_extended_tables.py  20260618_0003_add_comments_favorites.py  20260620_0001_add_knowledge_base_tables.py  20260621_0001_add_travel_notes.py  20260707_0001_add_analytics_events.py  20260708_0001_add_analytics_admins.py  20260722_0001_add_task_audit.py
backend/app/: main.py
backend/app/api/: errors.py  responses.py  router.py
backend/app/core/: config.py  error_codes.py  exceptions.py  logging.py  monitoring.py  safety.py  security.py
backend/app/data/: README.md  destinations.json  outfits.json  photo_spots.json
backend/lv_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: add_data_center_admin.py  build_travel_knowledge_seeds.py  clean_and_import.py  collect_amap_pois.py  crawl_xiaohongshu.py  normalize_xhs_cli_export.py  seed_knowledge.py  test_agent.py
backend/tests/: conftest.py  test_ai_integration.py  test_analytics.py  test_api_contracts.py  test_auth.py  test_knowledge_planning.py  test_llm_json_client.py  test_new_apis.py  test_ops_audit.py  test_rate_limit.py  test_services.py  test_task3_api.py
frontend/: .gitignore  (+8 more)
(+217 files in other folders)
